--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "superagent": "^2.1.0"
   },
   "devDependencies": {
+    "babel-cli": "^6.14.0",
     "babel-core": "^6.10.4",
     "babel-eslint": "^6.1.0",
     "babel-loader": "^6.2.2",
