--- a/config.default.json
+++ b/config.default.json
@@ -1,4 +1,5 @@
 {
+  "port": 8134,
   "sessionSecret": "please_replace_it_when_you_deploy",
   "authKey": "please_replace_it_when_you_deploy",
   "stockRoomsVersion": 3,
