--- a/package.json
+++ b/package.json
@@ -5,13 +5,12 @@
   "dependencies": {
     "cheerio": "^0.20.0",
     "express-session": "^1.14.0",
-    "flux": "^2.1.1",
-    "keymirror": "^0.1.1",
     "marked": "^0.3.5",
     "material-ui": "^0.15.1",
     "moment-timezone": "^0.5.4",
     "momentjs": "^1.1.10",
     "object-assign": "^4.0.1",
+    "phantom": "^2.1.21",
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
     "react-router": "^2.5.1",
